опробовал получение контрастного изображения

--- a/ParallelComputingLabs/Lab1/Lab1.csproj
+++ b/ParallelComputingLabs/Lab1/Lab1.csproj
@@ -26,7 +26,13 @@
     <None Update="Resources\image1_128.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\image1_256.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\image1_512.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\image1_64.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
