--- a/ParallelComputingLabs/Lab1/Lab1.csproj
+++ b/ParallelComputingLabs/Lab1/Lab1.csproj
@@ -35,6 +35,12 @@
     <None Update="Resources\image1_64.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\image2_1024.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\image2_4096.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
